[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Jokler <jokler.contact@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
xml-rs = "0.8.4"
failure = "0.1.8"
reqwest = "0.11.10"
url = "2.2.2"
rand = "0.8.5"
bincode = "1.3.3"
circular-queue = "0.2.6"
rawr = { git = "https://github.com/Jokler/rawr" }
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }

[dependencies.serenity]
version = "0.11.2"
features = ["client", "standard_framework", "voice"]
