[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Jokler <jokler.contact@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.9.3"
log = "0.4.21"
xml-rs = "0.8.19"
reqwest = "0.11.26"
url = "2.5.0"
rand = "0.8.5"
bincode = "1.3.3"
circular-queue = "0.2.6"
rawr = { git = "https://github.com/Jokler/rawr" }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
serenity = { version = "0.12", features = ["voice"] }
poise = "0.6.1"
